--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,6 +1,7 @@
 {
   "version": "0.2.0",
   "configurations": [
+    
     {
       "name": "Launch Django Backend",
       "type": "python",
@@ -13,7 +14,8 @@
       "env": {
         "PYTHONPATH": "${workspaceFolder}/octofit-tracker/backend/venv/bin/python",
         "VIRTUAL_ENV": "${workspaceFolder}/octofit-tracker/backend/venv",
-        "PATH": "${workspaceFolder}/octofit-tracker/backend/venv/bin:${env:PATH}"
+        "PATH": "${workspaceFolder}/octofit-tracker/backend/venv/bin:${env:PATH}",
+        "CODESPACE_NAME": "${env:CODESPACE_NAME}"
       }
     },
     {
